2.0.0
    Clean up the build so the stringtemplate stuff is useful

2.0pre15
    Move StringTemplate stuff back into unstable

    Support for checkpointed transactions

2.0pre14
    Add convenience classes for one value result sets

    StringTemplate 3.0 based statement locator and a classpath based loader

    Improve grammar for named param parsing (| in LITERAL)

2.0pre13
    Spring (2.0) support classes

    Add ability to define statement attributes at the DBI and Handle levels

    Have prepared batch use the statement locator

    Bean resultset mapper invokes the right ResultSet.getXXX() for each property type
    (getObject() on Oracle returns internal Oracle types)

    Allow positional binding for PreparedBatch

    Renamed PreparedBatchPart.another() to next()

    Change SQLStatement#first to return null on an empty result instead of an NPE

    Allow setting attributes on statement contexts for batches and prepared batches

    SQLStatement.bindNull(...)

2.0pre12
    [bugfix] Pass statement context into result mapped queries

2.0pre11
    Create the StatementContext to allow for tunneling state into the various
    client defined tweakables

2.0pre10
    allow numbers in named params

2.0pre9
    Fix up IDBI to have the DBI functional methods and not the config methods

2.0pre8
    Add double quote handling to named param magic

2.0pre7
    Added Oracle DML Returning features

2.0pre6
    Pluggable statement builders

    More literal characters in the named statement parser

2.0pre5
    Improve grammar for named param parsing (_ @ and _ in LITERAL)

2.0pre4
    Switch to an ANTLR based grammar for named param parsing

2.0pre3
    JDBC4 Style "Ease of Development" and API Docs

2.0pre2
    Flesh out convenience APIS

2.0pre1
    Complete Rewrite

1.4.5
    Fix bug in caching added in 1.4.4

    Optimize statement literal or named statement detection

1.4.4
    Allow for create/drop/alter statements
