@@ -1,6 +1,8 @@
 2.0.0
     Clean up the build so the stringtemplate stuff is useful
 
+    SQLStatement#bind(*, Character) which converts to a string
+
 2.0pre15
     Move StringTemplate stuff back into unstable
 
